[package]
name = "garage-door"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A simple OIDC provider, for demo purposes"

authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/garage-door"
categories = ["authentication", "web-programming"]
keywords = ["oidc", "server", "issuer"]
readme = "README.md"
rust-version = "1.78"

[dependencies]
log = "0.4.21"
thiserror = "1"
tokio = "1"
tracing = "0.1.40"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8.26"
actix-web = "4"
mime = "0.3.17"
url = "2.5.0"
strum = { version = "0.26.2", features = ["derive"] }
schemars = { version = "0.8", features = ["derive", "url"] }

chrono = "0.4"
biscuit = "0.7.0"

oxide-auth = "0.5.4"
oxide-auth-actix = "0.2"

openidconnect = { version = "4.0.0-alpha.1", default-features = false }

clap = { version = "4.5.4", features = ["derive", "env"], optional = true }
tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "ansi", "env-filter"], optional = true }


[features]
default = []
server = [
    "clap",
    "tokio/full",
    "tracing-subscriber",
]

[[bin]]
name = "server"
required-features = ["server"]
