[package]
name = "garage-door"
version = "0.1.0-alpha.2"
edition = "2021"
description = "A simple OIDC provider, for demo purposes"

authors = ["Jens Reimann <ctron@dentrassi.de>"]
license = "Apache-2.0"
repository = "https://github.com/ctron/garage-door"
categories = ["authentication", "web-programming"]
keywords = ["oidc", "server", "issuer"]
readme = "README.md"
rust-version = "1.78"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
anyhow = "1"
biscuit = "0.7.0"
chrono = "0.4"
hide = { version = "0.1.5", features = ["serde", "schemars"] }
log = "0.4.21"
mime = "0.3.17"
oauth2 = "5.0.0-alpha.4"
openidconnect = { version = "4.0.0-alpha.1", default-features = false }
schemars = { version = "0.8", features = ["derive", "url"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "~0.8.26"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1"
tokio = "1"
tracing = "0.1.40"
url = "2.5.0"

oxide-auth = "0.6.0"
oxide-auth-actix = "0.3.0"

clap = { version = "4.5.4", features = ["derive", "env"], optional = true }
tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "ansi", "env-filter"], optional = true }

[features]
default = []
server = [
    "clap",
    "tokio/full",
    "tracing-subscriber",
]

[[bin]]
name = "server"
required-features = ["server"]

[patch.crates-io]
#oxide-auth = { path = "../oxide-auth/oxide-auth" }
#oxide-auth = { git = "https://github.com/ctron/oxide-auth", rev = "cdf46ddb3d2077f414d672a5c5c6197cb88c610d" }
